--- a/c01/index.html
+++ b/c01/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <title>c01 | Chapter 1 | jQuery Training</title>
 <link rel="stylesheet" href="css/layout.css">
-
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="scripts/custom.js"></script>
 </head>
 <body>
 <div class="wrapper-header">
