--- a/c02/index.html
+++ b/c02/index.html
@@ -12,17 +12,20 @@
 	<body>
 		<!-- ==============box============== -->
 		<div class="wrapper-headerinfo">
-			<div class="headerinfo-contents clear">
-				<img src="images/header-info-img.png" width="300" height="120" >
-				<p>jQuero(ジェイクエロ)は、人にも…プロジェクトです。<br>
-					事務所所在地<br>
-					〒111-1111 東京都南区北台1-1-1</p>
-			</div><!-- ./headerinfo-contents -->
+			<div class="headerinfo">
+				<div class="headerinfo-contents clear">
+					<img src="images/header-info-img.png" width="300" height="120" >
+					<p>jQuero(ジェイクエロ)は、人にも…プロジェクトです。<br>
+						事務所所在地<br>
+						〒111-1111 東京都南区北台1-1-1</p>
+				</div><!-- ./headerinfo-contents -->
+			</div><!-- ./headerinfo -->
 		</div><!-- ./wrapper-headerinfo -->
 
 		<!-- ==============/box============== -->
 		<div class="wrapper-header">
 			<div class="header">
+				<div class="nav-info"><a href="#">ACCESS</a></div>
 				<h1>jQuero!</h1>
 			</div><!-- /.header -->
 		</div><!-- /.wrapper-header -->
