--- a/c02/index.html
+++ b/c02/index.html
@@ -63,7 +63,13 @@
 					<h2>1人より2人、2人より…大勢！</h2>
 					<p>世界中の$()使用量をカウントし、その数によって貯蓄する$OPEN.Deposit、その貯蓄をオープンソース組織に分配する$SHARE.Fundなどのクラウド・ソリューションは、1人では決して生まれませんでした。</p>
 					<!-- ==============tab============== -->
-
+					<div class="tab">
+						<ul class="tab-menu clear">
+							<li class="selected"><a href="#">TIP1</a></li>
+							<li><a href="#">TIP2</a></li>
+							<li><a href="#">TIP3</a></li>
+						</ul><!-- /.tab-menu -->
+					</div><!-- /.tab -->
 					<!-- ==============/tab============== --> 
 				</div><!-- /.main-contents --> 		
 			</div><!-- /.main --> 
