--- a/c02/index.html
+++ b/c02/index.html
@@ -65,10 +65,24 @@
 					<!-- ==============tab============== -->
 					<div class="tab">
 						<ul class="tab-menu clear">
-							<li class="selected"><a href="#">TIP1</a></li>
-							<li><a href="#">TIP2</a></li>
-							<li><a href="#">TIP3</a></li>
+							<li class="selected"><a href="#" data-tabid="1">TIP1</a></li>
+							<li><a href="#" data-tabid="2">TIP2</a></li>
+							<li><a href="#" data-tabid="3">TIP3</a></li>
 						</ul><!-- /.tab-menu -->
+						<div class="tab-contents">
+							<div data-contentid="1">
+								<h3>多くのことをより簡単に</h3>
+								<p>ある程度使えるようになれば…かもしれない。</p>
+							</div>
+							<div class="hidden" data-contentid="2">
+								<h3>仕組みがわかると面白い</h3>
+								<p>動作の根本的な仕組みがわかったからといって…間違いない。</p>
+							</div>
+							<div class="hidden" data-contentid="3">
+								<h3>最初は少しずつ</h3>
+								<p>上達のコツは、ちょっと書いては確認…原因究明も簡単だ。</p>
+							</div>
+						</div>
 					</div><!-- /.tab -->
 					<!-- ==============/tab============== --> 
 				</div><!-- /.main-contents --> 		
