add page 120 html

--- a/c02/index.html
+++ b/c02/index.html
@@ -56,7 +56,15 @@
 					<p class="lead">ユーザーにはスムーズで直感的な操作性を。開発者にはパワフルで使いやすい環境を。jQueroで。</p>
 					<p>プロジェクトにも自分たちにも、自然にも過度な負担のかからないワークフローを。洗練されたツールで開発して、素早くリリース。日々の改善を主眼に置いたワークフローを実現しましょう。</p>
 					<!-- ==============gallery============== -->
-
+					<div class="gallery">
+						<ul class="thumbnails clear">
+							<li class="selected"><a href="#"><img src="images/thumbnail-01.jpg"></a></li>
+							<li><a href="#"><img src="images/thumbnail-02.jpg"></a></li>
+							<li><a href="#"><img src="images/thumbnail-03.jpg"></a></li>
+							<li><a href="#"><img src="images/thumbnail-04.jpg"></a></li>
+							<li><a href="#"><img src="images/thumbnail-05.jpg"></a></li>
+						</ul>
+					</div><!-- /.gallery -->
 					<!-- ==============/gallery============== -->
 					<h2>コラボレーションから生まれたプロダクツ</h2>
 					<p>PCの冷却ファンの風力を利用して発電し、その電力で充電する無停電電源装置LOHA-upSをはじめとして、常識を覆すサステイナブルな製品は、コラボレーションから生まれました。</p>
@@ -72,21 +80,21 @@
 						<div class="tab-contents">
 							<div data-contentid="1">
 								<h3>多くのことをより簡単に</h3>
-								<p>ある程度使えるようになれば…かもしれない。</p>
+								<p>ある程度使えるようになれば、プラグインを探すよりも自分で書いたほうが手間がかからなくなる。プラグインの動作で妥協することもなくなる……かもしれない。</p>
 							</div>
 							<div class="hidden" data-contentid="2">
 								<h3>仕組みがわかると面白い</h3>
-								<p>動作の根本的な仕組みがわかったからといって…間違いない。</p>
+								<p>動作の根本的な仕組みがわかったからといって、より良いものが作れるわけではないかもしれない。でも、作るのが楽しくなるのは間違いない。</p>
 							</div>
 							<div class="hidden" data-contentid="3">
 								<h3>最初は少しずつ</h3>
-								<p>上達のコツは、ちょっと書いては確認…原因究明も簡単だ。</p>
+								<p>上達のコツは、ちょっと書いては確認、ちょっと書いてはまた確認、というように、少し記述して動作を調べてみること。動きがわかり、動かなかったときの原因究明も簡単だ。</p>
 							</div>
 						</div>
 					</div><!-- /.tab -->
-					<!-- ==============/tab============== --> 
-				</div><!-- /.main-contents --> 		
-			</div><!-- /.main --> 
+					<!-- ==============/tab============== -->
+				</div><!-- /.main-contents -->
+			</div><!-- /.main -->
 		</div><!-- /.wrapper-main -->
 		<div class="wrapper-footer">
 			<div class="footer">
