--- a/c02/index.html
+++ b/c02/index.html
@@ -57,12 +57,15 @@
 					<p>プロジェクトにも自分たちにも、自然にも過度な負担のかからないワークフローを。洗練されたツールで開発して、素早くリリース。日々の改善を主眼に置いたワークフローを実現しましょう。</p>
 					<!-- ==============gallery============== -->
 					<div class="gallery">
+						<div class="mainimage">
+							<img src="images/photo-01.jpg">
+						</div><!-- /.mainimage -->
 						<ul class="thumbnails clear">
-							<li class="selected"><a href="#"><img src="images/thumbnail-01.jpg"></a></li>
-							<li><a href="#"><img src="images/thumbnail-02.jpg"></a></li>
-							<li><a href="#"><img src="images/thumbnail-03.jpg"></a></li>
-							<li><a href="#"><img src="images/thumbnail-04.jpg"></a></li>
-							<li><a href="#"><img src="images/thumbnail-05.jpg"></a></li>
+							<li class="selected"><a href="#" data-img="images/photo-01.jpg"><img src="images/thumbnail-01.jpg"></a></li>
+							<li><a href="#" data-img="images/photo-02.jpg"><img src="images/thumbnail-02.jpg"></a></li>
+							<li><a href="#" data-img="images/photo-03.jpg"><img src="images/thumbnail-03.jpg"></a></li>
+							<li><a href="#" data-img="images/photo-04.jpg"><img src="images/thumbnail-04.jpg"></a></li>
+							<li><a href="#" data-img="images/photo-05.jpg"><img src="images/thumbnail-05.jpg"></a></li>
 						</ul>
 					</div><!-- /.gallery -->
 					<!-- ==============/gallery============== -->
