--- a/c03/index.html
+++ b/c03/index.html
@@ -15,6 +15,19 @@
 		<div class="wrapper-header">
 			<div class="header">
 				<!-- ==============dropdown-menu============== -->
+				<div class="wrapper-menubar">
+					<ul class="menubar">
+						<li class="dropdown-menu">
+							<a href="#">LANGUAGE</a>
+							<ul class="items">
+								<li><a href="#">Japanese</a></li>
+								<li><a href="#">English</a></li>
+								<li><a href="#">Chinese</a></li>
+								<li><a href="#">Russian</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div><!-- /.wrapper-menubar -->
 
 				<!-- ==============/dropdown-menu============== -->
 				<h1>jQuero!</h1>
@@ -65,38 +78,38 @@
 				<div class="news">
 					<h1>NEWS</h1>
 					<!-- ==============accordion============== -->
-			<ul class="accordion">
-				<li>
-					<h2>オープンソースで自然とともに</h2>
-					<div class="content">
-						<p>jQuero（ジェイクエロ）は、できるだけ自然に負荷をかけずにソフトウェア開発に取り組むプロジェクトです。</p>
-					</div>
-				</li>
-				<li>
-					<h2>電力使用量を減らそう</h2>
-					<div class="content">
-						<p>できるかぎり消費電力の少ないPCを使うことはもちろん、仕事は時間が来たら切り上げて、照明を消しています。</p>
-					</div>
-				</li>
-				<li>
-					<h2>コラボレーションから生まれたプロダクツ</h2>
-					<div class="content">
-						<p>常識を覆すサステイナブルな製品は、コラボレーションから生まれました。</p>
-					</div>
-				</li>
-				<li>
-					<h2>多くのことをより簡単に</h2>
-					<div class="content">
-						<p>ある程度使えるようになれば、プラグインを探すよりも自分で書いたほうが手間がかかりません。</p>
-					</div>
-				</li>
-				<li>
-					<h2>最初は少しずつ</h2>
-					<div class="content">
-						<p>上達のコツは、ちょっと書いては確認、ちょっと書いてはまた確認、というように、少し記述して動作を調べてみることです。</p>
-					</div>
-				</li>
-			</ul>
+					<ul class="accordion">
+						<li>
+							<h2>オープンソースで自然とともに</h2>
+							<div class="content">
+								<p>jQuero（ジェイクエロ）は、できるだけ自然に負荷をかけずにソフトウェア開発に取り組むプロジェクトです。</p>
+							</div>
+						</li>
+						<li>
+							<h2>電力使用量を減らそう</h2>
+							<div class="content">
+								<p>できるかぎり消費電力の少ないPCを使うことはもちろん、仕事は時間が来たら切り上げて、照明を消しています。</p>
+							</div>
+						</li>
+						<li>
+							<h2>コラボレーションから生まれたプロダクツ</h2>
+							<div class="content">
+								<p>常識を覆すサステイナブルな製品は、コラボレーションから生まれました。</p>
+							</div>
+						</li>
+						<li>
+							<h2>多くのことをより簡単に</h2>
+							<div class="content">
+								<p>ある程度使えるようになれば、プラグインを探すよりも自分で書いたほうが手間がかかりません。</p>
+							</div>
+						</li>
+						<li>
+							<h2>最初は少しずつ</h2>
+							<div class="content">
+								<p>上達のコツは、ちょっと書いては確認、ちょっと書いてはまた確認、というように、少し記述して動作を調べてみることです。</p>
+							</div>
+						</li>
+					</ul>
 
 					<!-- ==============/accordion============== -->
 				</div><!-- /.news -->
