--- a/c03/index.html
+++ b/c03/index.html
@@ -31,7 +31,7 @@
 
 				<!-- ==============/dropdown-menu============== -->
 				<h1>jQuero!</h1>
-			</div><!-- /.header --> 
+			</div><!-- /.header -->
 		</div><!-- /.wrapper-header -->
 
 		<div class="wrapper-nav-global">
@@ -56,7 +56,7 @@
 				<ul class="shortcut clear">
 					<li class="first">
 						<a href="#" class="btn-action">
-							<img src="images/shortcut1.png">
+							<img src="images/shortcut1.png" alt="shortcut">
 							<p>SAVE</p>
 						</a>
 					</li>
