--- a/c03/index.html
+++ b/c03/index.html
@@ -126,16 +126,18 @@
 				<div class="articles">
 					<h1>ARTICLES</h1>
 					<!-- ==============ajax============== -->
-
+					<div class="btn">
+						<a href="ajax/article1.json" class="btn-details" id="fetch">more</a>
+					</div><!-- /.btn -->
 					<!-- ==============/ajax============== -->
-				</div><!-- /.articles--> 
+				</div><!-- /.articles-->
 			</div><!-- /.main -->
 
 		</div><!-- /.wrapper-main -->
 		<div class="wrapper-footer">
 			<div class="footer">
 				<p>©jQuero</p>
-			</div><!-- /.footer --> 
+			</div><!-- /.footer -->
 		</div><!-- /.wrapper-footer -->
 	</body>
 </html>
