--- a/c03/index.html
+++ b/c03/index.html
@@ -126,6 +126,8 @@
 				<div class="articles">
 					<h1>ARTICLES</h1>
 					<!-- ==============ajax============== -->
+					<ul id="ajax-list">
+					</ul>
 					<div class="btn">
 						<a href="ajax/article1.json" class="btn-details" id="fetch">more</a>
 					</div><!-- /.btn -->
