--- a/c04/index.html
+++ b/c04/index.html
@@ -37,7 +37,7 @@
 			<div class="main clear">
 
 				<!-- ==============sidebar============== -->
-				<div class="wrapper-sidebar">
+				<div class="wrapper-sidebar fixedmenu" data-offsettop="70">
 					<div class="sidebar">
 						<ul>
 							<li><a href="#chapter1">Chapter 1</a></li>
