--- a/c04/index.html
+++ b/c04/index.html
@@ -37,8 +37,8 @@
 			<div class="main clear">
 
 				<!-- ==============sidebar============== -->
-				<div class="wrapper-sidebar fixedmenu" data-offsettop="70">
-					<div class="sidebar">
+				<div class="wrapper-sidebar">
+					<div class="sidebar fixedmenu noresponsive" data-offsettop="70">
 						<ul>
 							<li><a href="#chapter1">Chapter 1</a></li>
 							<li><a href="#chapter2">Chapter 2</a></li>
