--- a/c04/index.html
+++ b/c04/index.html
@@ -53,7 +53,7 @@
 
 				<div class="wrapper-contents">
 					<div class="contents">
-						<div class="section" id="chapter1">
+						<div class="section" id="chapter1" data-offsettop="70">
 							<h1>Chapter 1</h1>
 							<p class="lead">ユーザーにはスムーズで直感的な操作性を。開発者にはパワフルで使いやすい環境を。jQueroで。</p>
 							<p>プロジェクトにも自分たちにも、自然にも過度な負担のかからないワークフローを。洗練されたツールで開発して、素早くリリース。<a href="#" class="show-modal">日々の改善を主眼に置いたワークフロー</a>を実現しましょう。</p>
@@ -62,7 +62,7 @@
 							<h2>1人より2人、2人より…大勢！</h2>
 							<p>世界中のjQueryセレクタ使用量をカウントし、その数によって貯蓄する$Deposit、その貯蓄をオープンソース組織に分配する$Fundなどのクラウド・ソリューションは、1人では決して生まれませんでした。</p>
 						</div>
-						<div class="section" id="chapter2">
+						<div class="section" id="chapter2" data-offsettop="70">
 							<h1>Chapter 2</h1>
 							<p class="lead">ユーザーにはスムーズで直感的な操作性を。開発者にはパワフルで使いやすい環境を。jQueroで。</p>
 							<p>プロジェクトにも自分たちにも、自然にも過度な負担のかからないワークフローを。洗練されたツールで開発して、素早くリリース。日々の改善を主眼に置いたワークフローを実現しましょう。</p>
@@ -71,7 +71,7 @@
 							<h2>1人より2人、2人より…大勢！</h2>
 							<p>世界中のjQueryセレクタ使用量をカウントし、その数によって貯蓄する$Deposit、その貯蓄をオープンソース組織に分配する$Fundなどのクラウド・ソリューションは、1人では決して生まれませんでした。</p>
 						</div>
-						<div class="section" id="chapter3">
+						<div class="section" id="chapter3" data-offsettop="70">
 							<h1>Chapter 3</h1>
 							<p class="lead">ユーザーにはスムーズで直感的な操作性を。開発者にはパワフルで使いやすい環境を。jQueroで。</p>
 							<p>プロジェクトにも自分たちにも、自然にも過度な負担のかからないワークフローを。洗練されたツールで開発して、素早くリリース。日々の改善を主眼に置いたワークフローを実現しましょう。</p>
@@ -80,7 +80,7 @@
 							<h2>1人より2人、2人より…大勢！</h2>
 							<p>世界中のjQueryセレクタ使用量をカウントし、その数によって貯蓄する$Deposit、その貯蓄をオープンソース組織に分配する$Fundなどのクラウド・ソリューションは、1人では決して生まれませんでした。</p>
 						</div>
-						<div class="section" id="chapter4">
+						<div class="section" id="chapter4" data-offsettop="70">
 							<h1>Chapter 4</h1>
 							<p class="lead">ユーザーにはスムーズで直感的な操作性を。開発者にはパワフルで使いやすい環境を。jQueroで。</p>
 							<p>プロジェクトにも自分たちにも、自然にも過度な負担のかからないワークフローを。洗練されたツールで開発して、素早くリリース。日々の改善を主眼に置いたワークフローを実現しましょう。</p>
@@ -89,7 +89,7 @@
 							<h2>1人より2人、2人より…大勢！</h2>
 							<p>世界中の$()使用量をカウントし、その数によって貯蓄する$OPEN.Deposit、その貯蓄をオープンソース組織に分配する$SHARE.Fundなどのクラウド・ソリューションは、1人では決して生まれませんでした。</p>
 						</div>
-						<div class="section" id="chapter5">
+						<div class="section" id="chapter5" data-offsettop="70">
 							<h1>Chapter 5</h1>
 							<p class="lead">ユーザーにはスムーズで直感的な操作性を。開発者にはパワフルで使いやすい環境を。jQueroで。</p>
 							<p>プロジェクトにも自分たちにも、自然にも過度な負担のかからないワークフローを。洗練されたツールで開発して、素早くリリース。日々の改善を主眼に置いたワークフローを実現しましょう。</p>
@@ -98,7 +98,7 @@
 							<h2>1人より2人、2人より…大勢！</h2>
 							<p>世界中の$()使用量をカウントし、その数によって貯蓄する$OPEN.Deposit、その貯蓄をオープンソース組織に分配する$SHARE.Fundなどのクラウド・ソリューションは、1人では決して生まれませんでした。</p>
 						</div>
-						<div class="section" id="chapter6">
+						<div class="section" id="chapter6" data-offsettop="70">
 							<h1>Chapter 6</h1>
 							<p class="lead">ユーザーにはスムーズで直感的な操作性を。開発者にはパワフルで使いやすい環境を。jQueroで。</p>
 							<p>プロジェクトにも自分たちにも、自然にも過度な負担のかからないワークフローを。洗練されたツールで開発して、素早くリリース。日々の改善を主眼に置いたワークフローを実現しましょう。</p>
