--- a/c04/index.html
+++ b/c04/index.html
@@ -112,6 +112,9 @@
 			</div><!-- /.main -->
 
 			<!-- ==============pageup============== -->
+			<div class="pageup">
+				<a href="#top" class="scroll-link"></a>
+			</div>
 
 			<!-- ==============/pageup============== -->
 
