--- a/c05/index.html
+++ b/c05/index.html
@@ -42,6 +42,14 @@
 
 			<!-- ==============/filter-btn============== -->
 			<!-- ==============table============== -->
+			<table id="shop">
+				<tr>
+					<th>店名</th>
+					<th>住所</th>
+					<th>電話番号</th>
+					<th colspan="3">設備</th>
+				</tr>
+			</table>
 
 			<!-- ==============/table============== -->
 		</div><!-- /.main-contents --> 
